--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "GUILD_ID": "YOUR_GUILD_ID",
-  "VOICE_CHANNEL_ID": "VOICE_CHANNEL_ID_HERE",
-  "ROLE_ID": "ROLE_ID_TO_MENTION",
-  "TEXT_CHANNEL_ID": "TEXT_CHANNEL_TO_SEND_MESSAGE"
+  "GUILD_ID": "1428975026497126422",
+  "VOICE_CHANNEL_ID": "1442034808422268970",
+  "ROLE_ID": "1440680017100144743",
+  "TEXT_CHANNEL_ID": "1429134590286762116"
 }
